# Bug-Bounty-Scope-Validator

./: .gitignore  CHANGELOG.md  README.md  requirements.txt  scope_checker.py  setup.cfg
.github/workflows/: test.yml
