[metadata]
name = scope_checker
version = 2.1.0
author = scope_checker contributors
description = Production bug bounty scope validator
long_description = file: README.md
long_description_content_type = text/markdown
url = <https://github.com/youruser/scope_checker>
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Security

[options]
python_requires = >=3.8
py_modules = scope_checker
install_requires =

[options.extras_require]
api =
    requests>=2.31.0
yaml =
    pyyaml>=6.0.1
all =
    requests>=2.31.0
    pyyaml>=6.0.1

[options.entry_points]
console_scripts =
    scope_checker = scope_checker:main
    scope-checker = scope_checker:main
